--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
     "local-data-server": "node ./api/server.js"
   },
   "devDependencies": {
-    "body-parser": "1.18.2",
-    "concurrently": "3.5.1",
-    "css-loader": "0.28.7",
-    "express": "4.16.2",
-    "html-webpack-plugin": "2.30.1",
-    "lodash": "4.17.4",
+    "body-parser": "1.18.3",
+    "concurrently": "4.1.0",
+    "css-loader": "2.1.0",
+    "express": "4.16.4",
+    "html-webpack-plugin": "3.2.0",
+    "lodash": "4.17.11",
     "random-seed": "0.3.0",
-    "style-loader": "0.19.0",
-    "webpack": "3.8.1",
-    "webpack-dev-server": "2.9.5"
+    "style-loader": "0.23.1",
+    "webpack": "4.29.3",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "3.1.14"
   }
 }
