--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": false,
   "scripts": {
     "start": "concurrently --raw \"npm run local-data-server\" \"npm run webpack-server\"",
-    "webpack-server": "webpack-dev-server",
+    "webpack-server": "webpack-dev-server --mode development",
     "local-data-server": "node ./api/server.js"
   },
   "devDependencies": {
